* FindObject(s)OfType for easy (but slightly inefficient) finding of game objects. Don't abuse this! (E.g. don't call from Update!)
* AnimationSprite has useful SetCycle and Animate methods, for easy animation.
* Utils has a FontLoader method, for loading fonts from (ttf) files.
* Gizmos: Allows for easily drawing line-based debug shapes on top of the scene.

----- 2021/2022 version (PBO06):

FEATURES:

* Colliders can now be made triggers, ignored by MoveUntilCollision (GetCollisions and OnCollision can be configured to include/exclude triggers or solid colliders)
* Adding SpriteBatch, for efficient rendering of large groups of static sprites (without colliders)
* Adding more blend modes
* More useful EasyDraw methods (Text and Clear overloads)
* Input.AnyKey(Down)
* Camera has ScreenPointToGlobal method
* MoveUntilCollision takes Lists too
* Enabling framerate independent animation for AnimationSprites
* TiledLoader can be called from a separate assembly
* VSync can be toggled at runtime
* Sprites can be initialized from a texture
* Minor changes (comments, updating folder structure, adding various getters, ...)

----- 2022/2023 version (PBO06):

BUG FIXES:
* InverseTransformPoint and InverseTransformDirection work correctly now, also with multiple ancestors
* Sprite: after rendering, it resets the glColor to white
* Canvas.DrawSprite considers origin and works with AnimationSprites
* The Canvas constructor that takes a Sprite now works correctly with addCollider parameter

FEATURES:
* More key codes
* TransformPoint and InverseTransformPoint can take a target ancestor as argument
* Camera windows can be configured to not clear the background (useful for UI overlays)

----- 2022/2023 b version:

BUG FIXES:
* Fixing breaking change in Tiled 1.9: TiledMapParser with with both class and type.
* GameObject.Render: uses the proper (efficient) type of GetChildren

FEATURE:
* Adding System reference for easy access to default libraries